--- a/Assets/Scripts/Game/View/Game.View.asmdef
+++ b/Assets/Scripts/Game/View/Game.View.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "",
     "references": [
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
-        "GUID:b1b67d87e429bdc49bea720e35f6a1a2"
+        "GUID:b1b67d87e429bdc49bea720e35f6a1a2",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
