--- a/Assets/Scripts/Game/Infrastructure/Game.Infrastructure.asmdef
+++ b/Assets/Scripts/Game/Infrastructure/Game.Infrastructure.asmdef
@@ -7,7 +7,8 @@
         "GUID:a15547934a99e704d9560876afe80cb7",
         "GUID:41dcaa52d1f6d254cba1ed411b2bf905",
         "GUID:b1b67d87e429bdc49bea720e35f6a1a2",
-        "GUID:69810832b544b46da9804f1af9373521"
+        "GUID:69810832b544b46da9804f1af9373521",
+        "GUID:26ce8579c5896f14a8d806b06f9f10d6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
