--- a/Assets/Scripts/Game/Model/Game.Model.asmdef
+++ b/Assets/Scripts/Game/Model/Game.Model.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
-        "GUID:1ed07ff861e5f468287b0baef844706d"
+        "GUID:1ed07ff861e5f468287b0baef844706d",
+        "GUID:26ce8579c5896f14a8d806b06f9f10d6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
