Added references on R3

--- a/Assets/Scripts/Game/Infrastructure/Game.Infrastructure.asmdef
+++ b/Assets/Scripts/Game/Infrastructure/Game.Infrastructure.asmdef
@@ -8,7 +8,8 @@
         "GUID:41dcaa52d1f6d254cba1ed411b2bf905",
         "GUID:b1b67d87e429bdc49bea720e35f6a1a2",
         "GUID:69810832b544b46da9804f1af9373521",
-        "GUID:26ce8579c5896f14a8d806b06f9f10d6"
+        "GUID:26ce8579c5896f14a8d806b06f9f10d6",
+        "GUID:77221876cc6b8244180b96e320b1bcd4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
