--- a/Assets/Scripts/Game/ViewModel/Game.ViewModel.asmdef
+++ b/Assets/Scripts/Game/ViewModel/Game.ViewModel.asmdef
@@ -5,7 +5,8 @@
         "GUID:a15547934a99e704d9560876afe80cb7",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
-        "GUID:26ce8579c5896f14a8d806b06f9f10d6"
+        "GUID:26ce8579c5896f14a8d806b06f9f10d6",
+        "GUID:77221876cc6b8244180b96e320b1bcd4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
