--- a/Assets/Scripts/Game/Model/Game.Model.asmdef
+++ b/Assets/Scripts/Game/Model/Game.Model.asmdef
@@ -5,7 +5,8 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
         "GUID:1ed07ff861e5f468287b0baef844706d",
-        "GUID:26ce8579c5896f14a8d806b06f9f10d6"
+        "GUID:26ce8579c5896f14a8d806b06f9f10d6",
+        "GUID:77221876cc6b8244180b96e320b1bcd4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
