--- a/Assets/Scripts/Game/View/Game.View.asmdef
+++ b/Assets/Scripts/Game/View/Game.View.asmdef
@@ -5,7 +5,8 @@
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
         "GUID:b1b67d87e429bdc49bea720e35f6a1a2",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:77221876cc6b8244180b96e320b1bcd4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
